# al-os

./: .gitignore  Makefile  README.md  README_RUS.md  create_disks.sh  index.html  linker.ld  mv.sh  qemu.bat
boot/: grub.cfg  kernel_entry.asm
iso/boot/: kernel.elf
iso/boot/grub/: grub.cfg
kernel/: fs.c  fs.h  kernel.c  kernel.h  keyboard.c  keyboard.h  panic.c  vga.c  vga.h
kernel/commands/: aarch.c  all_commands.h  calc.c  colorbar.c  cp.c  crash.c  date.c  disks.c  echo.c  execute_commands.c  fatwrite.c  help.c  help.h  history.c  meminfo.c  memtest.c  mv.c  slowfetch.c  sysinfo.c  time_cmd.c  tree.c  uptime.c  whoami.c
kernel/drivers/: keyboard.c  vga.c  vga.h
kernel/exec/: elf.c
kernel/fs/: fat.c  fs.c
kernel/utils/: beep.c  beep.h  colors.h  crash.c  crash.h  fat_shell.c  fm.c  fm_fat.c  history.c  history.h  init.c  memtest.c  metadata.c  metadata.h  panic.c  ports.h  random.h  screensaver.c  shell.c  string.c  string.h  time.c  time.h
kernel/utils/power/: power.h  poweroff.c  reboot.c  shutdown.c
rust_core/: Cargo.toml
rust_core/src/: lib.rs
src/apps/fm/: fm.c  fm.h
src/apps/nano/: nano.c  nano.h
src/apps/screensaver/: screensaver.c  screensaver.h
src/apps/shell/: fat_shell.c  fat_shell.h  history.c  history.h  shell.c  shell.h
src/boot/: grub.cfg
src/kernel/: kernel.c  kernel.h
src/kernel/commands/: aarch.c  all_commands.h  calc.c  colorbar.c  cp.c  crash.c  date.c  disks.c  echo.c  execute_commands.c  execute_commands.h  fatwrite.c  help.c  help.h  history.c  meminfo.c  memtest.c  mkrootfs.c  mv.c  net_test.c  ping.c  test.c  (+6 more)
(+50 files in other folders)
