[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# Добавляем вот этот блок:
[profile.release]
panic = "abort"      # При панике — сразу жесткий останов
lto = true           # Link-Time Optimization (чтобы вырезать лишний мусор)
opt-level = "z"      # Оптимизация по размеру бинарника (самое то для ядра)
